# RTC_interface

./: .gitignore  CMakeLists.txt  library.json  readme.md
examples/DS3231_module_with_EEPROM/: configManager.cpp  main.cpp
include/: RTC_interface.h  structs.h  testing_types.h
src/: CMakeLists.txt  RTC_interface.cpp
tests/: BCD_conversion_tests.cpp  CMakeLists.txt  Mock_tests.cpp  RTC_interface_tests.cpp  getBCD_tests.cpp  getLocalTimestamp_tests.cpp  getTime_tests.cpp  helpers.h  setTime_tests.cpp  timestamp_conversion_tests.cpp
tests/mocks/: CMakeLists.txt  MockConfigManager.cpp  MockConfigManager.h  MockWire.cpp  MockWire.h
